@@ -1,3 +1,9 @@
+2008-01-08  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-main.c:
+	Update Duplicate logic, so it checks for cdrdao and a writer
+	(thanks Dave Meikle).
+
 2008-01-06  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-main.c:
